--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "bullmq": "^5.35.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "ioredis": "^5.4.2",
+    "mongoose": "^8.9.5"
   }
 }
