--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev" : "npx nodemon src/index.js"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
@@ -16,6 +16,7 @@
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
     "ioredis": "^5.4.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "nodemon": "^3.1.9"
   }
 }
