Feat : Added Error Handler

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev" : "npx nodemon src/index.js"
+    "dev": "npx nodemon src/index.js"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
+    "http-status-codes": "^2.3.0",
     "ioredis": "^5.4.2",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
