--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.2",
+    "axios": "^1.7.9",
     "bullmq": "^5.35.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
